# smvc-api

./: .gitignore  README.md  pyproject.toml
smvc_api/: __init__.py  app.py  auth.py  classifier.py  miletribe_client.py  models.py  store.py
src/smvc_api/: __init__.py  __main__.py  config.py  logging_config.py  main.py
src/smvc_api/auth/: deps.py
src/smvc_api/integrations/: miletribe.py
src/smvc_api/models/: miletribe.py  pipeline.py
tests/: conftest.py
tests/acceptance/: REQUIREMENTS.md  test_classifier_acceptance.py  test_health_and_discovery.py  test_miletribe_contract.py  test_transfer_rbac.py
tests/integration/: test_miletribe_dev_optional.py
tests/unit/integrations/: test_miletribe_client.py
