[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smvc-api"
version = "0.1.0"
description = "Transfer Instagram videos to MileTribe with scenery filtering"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "starlette>=0.41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.21.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.11.0",
]
server = [
    "uvicorn>=0.30.0",
]

[tool.setuptools.packages.find]
include = ["smvc_api*"]

# Astral uv: lockfile is `uv.lock`. Typical workflow:
#   uv sync --all-extras    # install runtime + dev + server extras into .venv
#   uv run pytest
# See README.md for install links and pip fallback.

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"

[tool.mypy]
python_version = "3.11"
explicit_package_bases = true

# pytest does not publish py.typed; mypy treats imports as missing stubs otherwise.
[[tool.mypy.overrides]]
module = [
    "_pytest.*",
    "pytest.*",
    "pytest",
    "pytest_asyncio.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["respx.*"]
ignore_missing_imports = true

# Starlette/httpx wheels often lack py.typed in CI/IDEs; suppress missing-stub imports only in these modules.
[[tool.mypy.overrides]]
module = "smvc_api.app"
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = "smvc_api.miletribe_client"
disable_error_code = ["import-untyped"]
