[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smvc-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.0",
    "uvicorn[standard]>=0.45.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/smvc_api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "acceptance: business-level acceptance tests",
    "integration: optional tests against real MileTribe dev API (needs token)",
]
